<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainModule.view.PokemonDetail">

    <LinearLayout
        android:id="@+id/llPokeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvPokeName"
            style="@style/TextAppearance.MaterialComponents.Headline2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            app:layout_constraintBottom_toTopOf="@id/llType"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Gengar" />

        <TextView
            android:id="@+id/tvPokeId"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="94" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/llPokeName">

        <TextView
            android:id="@+id/tvType1"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="8dp"
            android:gravity="center_horizontal"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:background="@color/ghost"
            tools:text="Fantasma" />

        <TextView
            android:id="@+id/tvType2"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:gravity="center_horizontal"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:background="@color/poison"
            tools:text="Veneno" />

    </LinearLayout>

    <ImageView
        android:id="@+id/ivPokeDetail"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginVertical="160dp"
        android:elevation="16dp"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="400dp"
        android:elevation="8dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:cardBackgroundColor="#73673AB7">
        <!--        tools:background="@drawable/gradient_background"-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/llCardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llMeasure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@id/llTextNumberStats">

                <TextView
                    android:id="@+id/tvHeight"
                    style="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="16dp"
                    android:textColor="@color/white"
                    tools:text="200kg" />

                <TextView
                    android:id="@+id/tvWeight"
                    style="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    tools:text="200cm" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@color/white"
                app:layout_constraintTop_toBottomOf="@id/llMeasure" />

            <LinearLayout
                android:id="@+id/llTextNumberStats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="4dp"
                android:gravity="bottom"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintBottom_toTopOf="@id/llViewStats">

                <TextView
                    android:id="@+id/tvHP"
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    tools:text="100" />

                <TextView
                    android:id="@+id/tvAttack"
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    tools:text="100"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tvDefense"
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    tools:text="100"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tvAttackSpecial"
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    tools:text="100"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tvDefenseSpecial"
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    tools:text="100"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tvSpeed"
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:gravity="end"
                    tools:text="100"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llViewStats"
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:gravity="bottom"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@id/llTextStats"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <View
                    android:id="@+id/viewHp"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@color/black" />

                <View
                    android:id="@+id/viewAttack"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@color/black" />

                <View
                    android:id="@+id/viewDefense"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@color/black" />

                <View
                    android:id="@+id/viewSpecialAttack"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@color/black" />

                <View
                    android:id="@+id/viewSpecialDefense"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@color/black" />

                <View
                    android:id="@+id/viewSpeed"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llTextStats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:gravity="bottom"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:text="@string/category_hp"
                    android:textColor="@color/white" />

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:text="@string/category_attack"
                    android:textColor="@color/white" />

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:text="@string/category_defense"
                    android:textColor="@color/white" />

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/category_attack_special"
                    android:textColor="@color/white" />

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/category_defense_special"
                    android:textColor="@color/white" />

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/category_speed"
                    android:textColor="@color/white" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>